--- a/references.bib
+++ b/references.bib
@@ -514,3 +514,38 @@ Publisher: Sigma XI-The Scientific Research Society},
 	note = {Publisher: Taylor \& Francis
 {\_}eprint: https://doi.org/10.1080/0895-8378.1987.11463182}
 }
+
+@article{burnett2004,
+	title = {Associations between Short-Term Changes in Nitrogen Dioxide and Mortality in Canadian Cities},
+	author = {Burnett, Richard T. and , {Stieb ,Dave} and , {Brook ,Jeffrey R.} and , {Cakmak ,Sabit} and , {Dales ,Robert} and , {Raizenne ,Mark} and , {Vincent ,Renaud} and and Dann, Tom},
+	year = {2004},
+	month = {05},
+	date = {2004-05-01},
+	journal = {Archives of Environmental Health: An International Journal},
+	pages = {228--236},
+	volume = {59},
+	number = {5},
+	doi = {10.3200/AEOH.59.5.228-236},
+	url = {https://doi.org/10.3200/AEOH.59.5.228-236},
+	note = {Publisher: Routledge
+{\_}eprint: https://doi.org/10.3200/AEOH.59.5.228-236
+PMID: 16201668}
+}
+
+@article{andersen2008,
+	title = {Size distribution and total number concentration of ultrafine and accumulation mode particles and hospital admissions in children and the elderly in Copenhagen, Denmark},
+	author = {Andersen, Z. J. and Wahlin, P. and Raaschou-Nielsen, O. and Ketzel, M. and Scheike, T. and Loft, S.},
+	year = {2008},
+	month = {07},
+	date = {2008-07-01},
+	journal = {Occupational and Environmental Medicine},
+	pages = {458--466},
+	volume = {65},
+	number = {7},
+	doi = {10.1136/oem.2007.033290},
+	url = {https://oem.bmj.com/content/65/7/458},
+	note = {Publisher: BMJ Publishing Group Ltd
+Section: Original article
+PMID: 17989204},
+	langid = {en}
+}
