--- a/_manuscript/_tex/references.bib
+++ b/_manuscript/_tex/references.bib
@@ -549,3 +549,165 @@ Section: Original article
 PMID: 17989204},
 	langid = {en}
 }
+
+@article{isenberg2017,
+	title = {Visualization as Seen through its Research Paper Keywords},
+	author = {Isenberg, Petra and Isenberg, Tobias and Sedlmair, Michael and Chen, Jian and {Möller}, Torsten},
+	year = {2017},
+	month = {01},
+	date = {2017-01},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {771--780},
+	volume = {23},
+	number = {1},
+	doi = {10.1109/TVCG.2016.2598827},
+	url = {https://ieeexplore.ieee.org/document/7539364}
+}
+
+@inproceedings{el-arini2011,
+	title = {Beyond keyword search: discovering relevant scientific literature},
+	author = {El-Arini, Khalid and Guestrin, Carlos},
+	year = {2011},
+	month = {08},
+	date = {2011-08-21},
+	publisher = {Association for Computing Machinery},
+	pages = {439{\textendash}447},
+	series = {KDD '11},
+	doi = {10.1145/2020408.2020479},
+	url = {https://dl.acm.org/doi/10.1145/2020408.2020479},
+	address = {New York, NY, USA}
+}
+
+@article{chen2006,
+	title = {CiteSpace II: Detecting and visualizing emerging trends and transient patterns in scientific literature},
+	author = {Chen, Chaomei},
+	year = {2006},
+	date = {2006},
+	journal = {Journal of the American Society for Information Science and Technology},
+	pages = {359--377},
+	volume = {57},
+	number = {3},
+	doi = {10.1002/asi.20317},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/asi.20317},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/asi.20317},
+	langid = {en}
+}
+
+@inproceedings{bethard2010,
+	title = {CIKM '10: International Conference on Information and Knowledge Management},
+	author = {Bethard, Steven and Jurafsky, Dan},
+	year = {2010},
+	month = {10},
+	date = {2010-10-26},
+	publisher = {ACM},
+	pages = {609--618},
+	doi = {10.1145/1871437.1871517},
+	url = {https://dl.acm.org/doi/10.1145/1871437.1871517},
+	address = {Toronto ON Canada},
+	langid = {en}
+}
+
+@article{chou2011,
+	title = {PaperVis: Literature Review Made Easy},
+	author = {Chou, J. -K. and Yang, C. -K.},
+	year = {2011},
+	date = {2011},
+	journal = {Computer Graphics Forum},
+	pages = {721--730},
+	volume = {30},
+	number = {3},
+	doi = {10.1111/j.1467-8659.2011.01921.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1467-8659.2011.01921.x},
+	note = {{\_}eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1467-8659.2011.01921.x},
+	langid = {en}
+}
+
+@article{dörk2012,
+	title = {PivotPaths: Strolling through Faceted Information Spaces},
+	author = {{Dörk}, Marian and Henry Riche, Nathalie and Ramos, Gonzalo and Dumais, Susan},
+	year = {2012},
+	month = {12},
+	date = {2012-12},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {2709--2718},
+	volume = {18},
+	number = {12},
+	doi = {10.1109/TVCG.2012.252},
+	url = {https://ieeexplore.ieee.org/document/6327277}
+}
+
+@article{heimerl2016,
+	title = {CiteRivers: Visual Analytics of Citation Patterns},
+	author = {Heimerl, Florian and Han, Qi and Koch, Steffen and Ertl, Thomas},
+	year = {2016},
+	month = {01},
+	date = {2016-01},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {190--199},
+	volume = {22},
+	number = {1},
+	doi = {10.1109/TVCG.2015.2467621},
+	url = {https://ieeexplore.ieee.org/document/7192685/authors}
+}
+
+@inproceedings{alexander2014,
+	title = {2014 IEEE Conference on Visual Analytics Science and Technology (VAST)},
+	author = {Alexander, Eric and Kohlmann, Joe and Valenza, Robin and Witmore, Michael and Gleicher, Michael},
+	year = {2014},
+	month = {10},
+	date = {2014-10},
+	pages = {173--182},
+	doi = {10.1109/VAST.2014.7042493},
+	url = {https://ieeexplore.ieee.org/document/7042493}
+}
+
+@article{tbahriti2006,
+	title = {Using argumentation to retrieve articles with similar citations: An inquiry into improving related articles search in the MEDLINE digital library},
+	author = {Tbahriti, Imad and Chichester, Christine and Lisacek, {Frédérique} and Ruch, Patrick},
+	year = {2006},
+	month = {06},
+	date = {2006-06-01},
+	journal = {International Journal of Medical Informatics},
+	pages = {488--495},
+	series = {Recent Advances in Natural Language Processing for Biomedical Applications Special Issue},
+	volume = {75},
+	number = {6},
+	doi = {10.1016/j.ijmedinf.2005.06.007},
+	url = {https://www.sciencedirect.com/science/article/pii/S1386505605000894}
+}
+
+@article{narechania2022,
+	title = {VITALITY: Promoting Serendipitous Discovery of Academic Literature with Transformers \& Visual Analytics},
+	author = {Narechania, Arpit and Karduni, Alireza and Wesslen, Ryan and Wall, Emily},
+	year = {2022},
+	month = {01},
+	date = {2022-01},
+	journal = {IEEE Transactions on Visualization and Computer Graphics},
+	pages = {486--496},
+	volume = {28},
+	number = {1},
+	doi = {10.1109/TVCG.2021.3114820},
+	url = {https://ieeexplore.ieee.org/document/9552447/},
+	langid = {en}
+}
+
+@article{an,
+	title = {VITALITY 2: Reviewing Academic Literature Using Large Language Models},
+	author = {An, Hongye and Narechania, Arpit and Wall, Emily and Xu, Kai},
+	journal = {Presented at the NLVIZ Workshop, IEEE VIS 2024},
+	langid = {en}
+}
+
+@inproceedings{kang2022,
+	title = {CHI '22: CHI Conference on Human Factors in Computing Systems},
+	author = {Kang, Hyeonsu B and Kocielnik, Rafal and Head, Andrew and Yang, Jiangjiang and Latzke, Matt and Kittur, Aniket and Weld, Daniel S and Downey, Doug and Bragg, Jonathan},
+	year = {2022},
+	month = {04},
+	date = {2022-04-29},
+	publisher = {ACM},
+	pages = {1--23},
+	doi = {10.1145/3491102.3517470},
+	url = {https://dl.acm.org/doi/10.1145/3491102.3517470},
+	address = {New Orleans LA USA},
+	langid = {en}
+}
